<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bs_marker_info"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="28dp"
    android:paddingEnd="28dp"
    android:orientation="vertical"
    android:background="@drawable/bottom_sheet_background"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="28dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_scooter"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_gravity="bottom"
            android:layout_marginStart="16dp">
            <ImageView
                android:id="@+id/iv_bs_charge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_charged_bs"/>
            <TextView
                android:id="@+id/tv_bs_charge_percents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/charge_percents"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_gravity="bottom"
            android:layout_marginStart="16dp">
            <TextView
                android:id="@+id/tv_bs_scooter_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="1"
                android:textSize="48sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginBottom="6dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Твой самокат"
                android:textSize="16sp"/>
        </LinearLayout>
    </LinearLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="34dp">
        <RadioButton
            android:id="@+id/bs_button_minutes"
            style="@style/BsButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/bs_button_minutes"
            android:layout_marginEnd="8dp"/>
        <RadioButton
            android:id="@+id/bs_button_30_minutes"
            style="@style/BsButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/bs_button_30_minutes"
            android:layout_marginEnd="8dp"/>
        <RadioButton
            android:id="@+id/bs_button_hour"
            style="@style/BsButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/bs_button_hour"/>
    </RadioGroup>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_book"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:insetBottom="0dp"
        android:text="@string/reserve"
        app:cornerRadius="16dp"
        android:paddingVertical="16dp"
        android:layout_marginBottom="28dp"/>

</LinearLayout>